# Minecraft-clone

./: CMakeLists.txt  Readme.md
headers/: tool.hpp
headers/Minecraft/: block.hpp  buffers.hpp  chunck.hpp  entity.hpp  minecraft.hpp  player.hpp  shaders.hpp  textures.hpp  world.hpp
headers/opengl/: base.hpp  camera.hpp  color.hpp  image.hpp  indexBuffer.hpp  opengl.hpp  renderer.hpp  shader.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp
res/shaders/: block_fragment_shader.glsl  block_vertex_shader.glsl
src/: main.cpp  tool.cpp
src/Minecraft/: block.cpp  buffers.cpp  chunck.cpp  entity.cpp  minecraft.cpp  player.cpp  shaders.cpp  textures.cpp  world.cpp
src/opengl/: base.cpp  camera.cpp  color.cpp  image.cpp  indexBuffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
